Fixed Vanilla Pets & Other Cleanup